# NetworkLibrary

./: .gitignore  README.md
.github/: copilot-instructions.md
NetworkLibrary/: CMakeLists.txt
NetworkLibrary/ClientApp/: CMakeLists.txt
NetworkLibrary/ClientApp/Header/: EpollClient.h
NetworkLibrary/ClientApp/Source/: EpollClient.cpp  Main.cpp
NetworkLibrary/NetworkCore/: CMakeLists.txt  Main.cpp  Main.h
NetworkLibrary/NetworkCore/Header/: HttpParser.h  Listener.h  ListenerSocket.h  MessageFramer.h  RecvBuffer.h  RingBuffer.h  SendBuffer.h  ServerSocket.h  Session.h  Socket.h
NetworkLibrary/NetworkCore/Source/: HttpParser.cpp  Listener.cpp  ListenerSocket.cpp  MessageFramer.cpp  RecvBuffer.cpp  RingBuffer.cpp  SendBuffer.cpp  ServerSocket.cpp  Session.cpp  Socket.cpp
NetworkLibrary/ServerApp/: CMakeLists.txt
NetworkLibrary/ServerApp/Header/: EpollServer.h
NetworkLibrary/ServerApp/Source/: EpollServer.cpp  Main.cpp
NetworkLibrary/Tests/: CMakeLists.txt  Test_HttpParser.cpp  Test_MessageFramer.cpp  Test_RingBuffer.cpp  Test_SendBuffer.cpp
